styles.css
* {
  padding: 0;
  margin: 0;
  border: none;
  font-size: 16px;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 400;
}

#content {
  position: relative;
  width: 610px;
  margin-top: 40px;
  padding-left: 250px;
  padding-right: 100px;
}

nav {
  position: absolute;
  top: 0;
  left: 4%;
}

nav ul {
  list-style-type: none;
}

nav li {
  margin-bottom: 10px;
}

h1 {
  font-weight: 900;
}

p {
  line-height: 1.3em;
  margin-bottom: 0.7em;
}

#content > section {
  margin-bottom: 200px;
}

#content > section > h1 {
  font-size: 2.2em;
}

section > h1 {
  margin-bottom: 0.8em;
}

section ul {
  margin-left: 20px;
}

.out-of-view {
}

.out-of-view.left {
}

.out-of-view.right {
}

